<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/label_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/calories" />

<TextView
        android:id="@+id/label_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_calories"
        android:layout_below="@+id/text_calories"
        android:layout_marginTop="33dp"
        android:text="@string/per" />

    <TextView
        android:id="@+id/label_grams_of_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_per"
        android:layout_below="@+id/text_per"
        android:layout_marginTop="42dp"
        android:text="@string/grams_of_food" />

    <EditText
        android:id="@+id/text_grams_of_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/label_grams_of_food"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:inputType="numberDecimal"
        android:width="80dp"
        />

    <EditText
        android:id="@+id/text_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/text_grams_of_food"
        android:layout_alignTop="@+id/label_per"
        android:ems="10"
        android:inputType="numberDecimal"
        android:width="80dp" />

    <EditText
        android:id="@+id/text_calories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/label_calories"
        android:layout_toLeftOf="@+id/textView3"
        android:ems="10"
        android:inputType="numberDecimal"
        android:width="80dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_per"
        android:layout_marginLeft="18dp"
        android:layout_toRightOf="@+id/text_per"
        android:text="@string/grams" />

    <TextView
        android:id="@+id/label_calories_per_hundred_grams_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_grams_of_food"
        android:layout_below="@+id/text_grams_of_food"
        android:layout_marginTop="65dp"
        android:text="@string/calories_per_hundred_grams_answer" />

    <TextView
        android:id="@+id/value_calories_per_hundred_grams"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_calories_per_hundred_grams_answer"
        android:layout_alignRight="@+id/textView3"
        android:layout_marginRight="33dp"
        android:text="" />

    <TextView
        android:id="@+id/label_calories_total_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label_calories_per_hundred_grams_answer"
        android:layout_below="@+id/label_calories_per_hundred_grams_answer"
        android:layout_marginTop="35dp"
        android:text="@string/calories_total_answer" />

    <TextView
        android:id="@+id/value_calories_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/label_calories_total_answer"
        android:layout_alignRight="@+id/value_calories_per_hundred_grams"
        android:text="" />

</RelativeLayout>